# InteractionOps

./: .gitignore  .gitmodules  .readthedocs.yml  README.md  Text  _Releases  __init__.py  addon_preferences.py  align_object_to_face.py  cursor_origin.py  debug_keys.py  functions.py  iops.py  iops_state.py  key_cleaner.py  license  mkdocs.yml  my_pie.py  pytest.ini  read_me.md  requirements-docs.txt
.github/: dependabot.yml
Releases/: README.md
docs/: README.rst  conf.py  funcional_buttons.rst  index.md  index.rst  installation.md  installation.rst  operators.md  operators.rst  preferences.md  preferences.rst  requirements.txt  ui.md  ui.rst  visual_origin.rst
functions/: functions.py
operators/: Untitled-1.py  align_between_two.py  align_object_to_face.py  align_object_to_face2.py  align_origin_to_normal.py  array_rig.py  assets_management.py  assign_vertex_color.py  cursor_rotate.py  curve_spline_type.py  curve_subdivide.py  curve_subdivide_BACKUP_1937.py  curve_subdivide_LOCAL_1937.py  curve_subdivide_REMOTE_1937.py  drag_snap.py  drag_snap_cursor.py  drag_snap_uv.py  draw_theme_preview.py  easy_mod_array.py  easy_mod_curve.py  easy_mod_shwarp.py  executor.py  functions.py  grid_from_active.py  image_reload.py  instance_collection_append.py  iops.py  iops_state.py  library_reload.py  material_override.py  materials_from_textures.py  maya_isolate.py  mesh_convertSelection.py  mesh_convert_selection.py  mesh_copy_edges_angle.py  (+57 more)
rust/: Cargo.toml  README.md
rust/mesh_uv_shortest_mark_lib/: Cargo.toml
rust/mesh_uv_shortest_mark_lib/src/: lib.rs
(+267 files in other folders)
